DPNG-11254 Filter templates by plan name (#44)
